--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="header__nav">
         <ul class="header__nav-links-list">
             <li> <a class="header__nav-links-list-href" href="#">WELCOME</a> </li>
-            <li> <a class="header__nav-links-list-href" href="#">MENU</a> </li>
+            <li> <a class="header__nav-links-list-href" href="#menu">MENU</a> </li>
             <li> <a class="header__nav-links-list-href" href="#">EVENTS</a> </li>
             <li> <a class="header__nav-links-list-href" href="#">CONTACT</a> </li>
         </ul>
@@ -33,7 +33,7 @@
 <!-- <actually cook> -->
 <section class="actually-block">
     <img class="actually-block__image" src="build/img/romb.png" alt="image">
-    <p class="actually-block__title wow fadeInUp">What do we actually cook?</p>
+    <h3 class="actually-block__title wow fadeInUp">What do we actually cook?</h3>
     <p class="actually-block__text wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod
         tempor
         incididunt
@@ -46,7 +46,7 @@
     <div class="about-us-wrapper">
         <div class="about-us-block">
             <img class="about-us-block__image" src="build/img/Brush.png" alt="image">
-            <p class="about-us-block__title">New tastes</p>
+            <h3 class="about-us-block__title">New tastes</h3>
             <p class="about-us-block__text">Lorem ipsum dolor sit amet, consecte
                 sectetur adipisicing elit, tation omne
                 ullamco laboris nisi ut aliqolore.</p>
@@ -54,7 +54,7 @@
         <div class="about-us-block">
             <img class="about-us-block__image" src="build/img/Brush.png" alt="image">
             <img class="about-us-block__image" src="build/img/Brush.png" alt="image">
-            <p class="about-us-block__title">New dishes cooking</p>
+            <h3 class="about-us-block__title">New dishes cooking</h3>
             <p class="about-us-block__text">Lorem ipsum dolor sit amet, consecte
                 sectetur adipisicing elit, tation omne
                 ullamco laboris nisi ut aliqolore.</p>
@@ -63,7 +63,7 @@
             <img class="about-us-block__image" src="build/img/Brush.png" alt="image">
             <img class="about-us-block__image" src="build/img/Brush.png" alt="image">
             <img class="about-us-block__image" src="build/img/Brush.png" alt="image">
-            <p class="about-us-block__title">New restaurant</p>
+            <h3 class="about-us-block__title">New restaurant</h3>
             <p class="about-us-block__text">Lorem ipsum dolor sit amet, consecte
                 sectetur adipisicing elit, tation omne
                 ullamco laboris nisi ut aliqolore.</p>
@@ -71,6 +71,190 @@
     </div>
 </section>
 <!-- </about us> -->
+
+<!-- <bring tradition> -->
+<section class="bring-traditions-wrapper" id="menu">
+    <div class="bring-traditions">
+        <h3 class="bring-traditions__title">We bring tradition</h3>
+        <h3 class="bring-traditions__subtitle">TO YOUR PLATE</h3>
+
+        <div class="bring-traditions-our-menu-wrapper">
+            <div class="bring-traditions-our-menu">
+                <div class="bring-traditions-our-menu__image-left"
+                    style="background: url(build/img/place1.jpg) center no-repeat"></div>
+                <div class="bring-traditions-our-menu__description">
+                    <p class="bring-traditions-our-menu__description-title">California Sushi</p>
+                    <p class="bring-traditions-our-menu__description-text">Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit sed do
+                    </p>
+                    <p class="bring-traditions-our-menu__description-price">$14.95</p>
+                </div>
+            </div>
+            <div class="bring-traditions-our-menu">
+                <div class="bring-traditions-our-menu__image-left"
+                    style="background: url(build/img/place2.jpg) center no-repeat"></div>
+                <div class="bring-traditions-our-menu__description">
+                    <p class="bring-traditions-our-menu__description-title">Traditional Wok</p>
+                    <p class="bring-traditions-our-menu__description-text">Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit sed do
+                    </p>
+                    <p class="bring-traditions-our-menu__description-price">$14.95</p>
+                </div>
+            </div>
+            <div class="bring-traditions-our-menu">
+                <div class="bring-traditions-our-menu__description">
+                    <p class="bring-traditions-our-menu__description-title">Poké Bowl</p>
+                    <p class="bring-traditions-our-menu__description-text">Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit sed do
+                    </p>
+                    <p class="bring-traditions-our-menu__description-price">$14.95</p>
+                </div>
+                <div class="bring-traditions-our-menu__image-right"
+                    style="background: url(build/img/place3.jpg) center no-repeat"></div>
+            </div>
+            <div class="bring-traditions-our-menu">
+                <div class="bring-traditions-our-menu__description">
+                    <p class="bring-traditions-our-menu__description-title">Fresh Salmon</p>
+                    <p class="bring-traditions-our-menu__description-text">Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit sed do
+                    </p>
+                    <p class="bring-traditions-our-menu__description-price">$16.95</p>
+                </div>
+                <div class="bring-traditions-our-menu__image-right"
+                    style="background: url(build/img/place4.jpg) center no-repeat"></div>
+            </div>
+            <div class="bring-traditions-our-menu">
+                <div class="bring-traditions-our-menu__image-left"
+                    style="background: url(build/img/place5.jpg) center no-repeat"></div>
+                <div class="bring-traditions-our-menu__description">
+                    <p class="bring-traditions-our-menu__description-title">Avocado Sushi</p>
+                    <p class="bring-traditions-our-menu__description-text">Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit sed do
+                    </p>
+                    <p class="bring-traditions-our-menu__description-price">$14.95</p>
+                </div>
+            </div>
+            <div class="bring-traditions-our-menu">
+                <div class="bring-traditions-our-menu__image-left"
+                    style="background: url(build/img/place6.jpg) center no-repeat"></div>
+                <div class="bring-traditions-our-menu__description">
+                    <p class="bring-traditions-our-menu__description-title">King Sushi</p>
+                    <p class="bring-traditions-our-menu__description-text">Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit sed do
+                    </p>
+                    <p class="bring-traditions-our-menu__description-price">$14.95</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+<!-- </bring tradition> -->
+
+<!-- <simple things> -->
+<section class="simple-things">
+    <h3 class="simple-things__title wow zoomIn">We like to keep things simple</h3>
+    <p class="simple-things__text wow zoomIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor
+        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis </p>
+    <div class="simple-things__image wow zoomIn">
+        <img src="build/img/Brush.png" alt="image">
+        <img src="build/img/Brush.png" alt="image">
+        <img src="build/img/Brush.png" alt="image">
+    </div>
+</section>
+<!-- </simple things> -->
+
+<!-- <discover our menu> -->
+<section class="discover-our-menu">
+    <div class="discover-our-menu-titles">
+        <h3 class="discover-our-menu-titles__title">Discover</h3>
+        <h3 class="discover-our-menu-titles__subtitle">our new menu</h3>
+    </div>
+    <div class="discover-our-menu-wrapper">
+        <div class="discover-our-menu-content">
+            <!-- left -->
+            <div class="discover-our-menu-content__left">
+                <div class="discover-our-menu-content__left-box">
+                    <div class="discover-our-menu-content__left-box_image">
+                        <img src="build/img/elipse1.png" alt="image">
+                    </div>
+                    <div class="discover-our-menu-content__left-box_text">
+                        <a class="discover-our-menu-content__left-box_text-link" href="#">Nigiri with our best fish</a>
+                        <p class="discover-our-menu-content__left-box_text-description"> Lorem ipsum dolor sit amet,
+                            consectetur
+                            adipisicing elit sed do oculis <span> $14.95 </span> </p>
+                    </div>
+                </div>
+                <div class="discover-our-menu-content__left-box">
+                    <div class="discover-our-menu-content__left-box_image">
+                        <img src="build/img/elipse2.png" alt="image">
+                    </div>
+                    <div class="discover-our-menu-content__left-box_text">
+                        <a class="discover-our-menu-content__left-box_text-link" href="#">Nigiri with our best fish</a>
+                        <p class="discover-our-menu-content__left-box_text-description"> Lorem ipsum dolor sit amet,
+                            consectetur
+                            adipisicing elit sed do oculis <span> $14.95 </span> </p>
+                    </div>
+                </div>
+                <div class="discover-our-menu-content__left-box">
+                    <div class="discover-our-menu-content__left-box_image">
+                        <img src="build/img/elipse3.png" alt="image">
+                    </div>
+                    <div class="discover-our-menu-content__left-box_text">
+                        <a class="discover-our-menu-content__left-box_text-link" href="#">Nigiri with our best fish</a>
+                        <p class="discover-our-menu-content__left-box_text-description"> Lorem ipsum dolor sit amet,
+                            consectetur
+                            adipisicing elit sed do oculis <span> $14.95 </span> </p>
+                    </div>
+                </div>
+            </div>
+            <!-- /left -->
+
+            <!-- right -->
+            <div class="discover-our-menu-content__right">
+                <div class="discover-our-menu-content__left-box">
+                    <div class="discover-our-menu-content__left-box_image">
+                        <img src="build/img/elipse4.png" alt="image">
+                    </div>
+                    <div class="discover-our-menu-content__left-box_text">
+                        <a class="discover-our-menu-content__left-box_text-link" href="#">Nigiri with our best fish</a>
+                        <p class="discover-our-menu-content__left-box_text-description"> Lorem ipsum dolor sit amet,
+                            consectetur
+                            adipisicing elit sed do oculis <span> $14.95 </span> </p>
+                    </div>
+                </div>
+                <div class="discover-our-menu-content__left-box">
+                    <div class="discover-our-menu-content__left-box_image">
+                        <img src="build/img/elipse5.png" alt="image">
+                    </div>
+                    <div class="discover-our-menu-content__left-box_text">
+                        <a class="discover-our-menu-content__left-box_text-link" href="#">Nigiri with our best fish</a>
+                        <p class="discover-our-menu-content__left-box_text-description"> Lorem ipsum dolor sit amet,
+                            consectetur
+                            adipisicing elit sed do oculis <span> $14.95 </span> </p>
+                    </div>
+                </div>
+                <div class="discover-our-menu-content__left-box">
+                    <div class="discover-our-menu-content__left-box_image">
+                        <img src="build/img/elipse6.png" alt="image">
+                    </div>
+                    <div class="discover-our-menu-content__left-box_text">
+                        <a class="discover-our-menu-content__left-box_text-link" href="#">Nigiri with our best fish</a>
+                        <p class="discover-our-menu-content__left-box_text-description"> Lorem ipsum dolor sit amet,
+                            consectetur
+                            adipisicing elit sed do oculis <span> $14.95 </span> </p>
+                    </div>
+                </div>
+            </div>
+            <!-- /right -->
+        </div>
+    </div>
+</section>
+
+<!-- </discover our menu> -->
+
+
 
 <body>
 
