all ready, without adaptive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>Japanese restaurant</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="build/css/style.css">
     <link rel="stylesheet" href="build/css/animate.css">
@@ -15,10 +15,10 @@
 <header class="header">
     <nav class="header__nav">
         <ul class="header__nav-links-list">
-            <li> <a class="header__nav-links-list-href" href="#">WELCOME</a> </li>
-            <li> <a class="header__nav-links-list-href" href="#menu">MENU</a> </li>
-            <li> <a class="header__nav-links-list-href" href="#">EVENTS</a> </li>
-            <li> <a class="header__nav-links-list-href" href="#">CONTACT</a> </li>
+            <li> <a class="header__nav-links-list-href" href="#">welcome</a> </li>
+            <li> <a class="header__nav-links-list-href" href="#menu">menu</a> </li>
+            <li> <a class="header__nav-links-list-href" href="#events">events</a> </li>
+            <li> <a class="header__nav-links-list-href" href="#contacts">contact</a> </li>
         </ul>
     </nav>
     <div class="header-information">
@@ -254,18 +254,79 @@
 
 <!-- </discover our menu> -->
 
+<!-- <our event> -->
+<section class="events" id="events">
+    <h3 class="events__title">Our new events</h3>
+    <h3 class="events__subtitle">Don't miss!</h3>
+    <div class="events-content">
+        <!-- <first> -->
+        <div class="events-content-box">
+            <div class="events-content-box__image">
+                <img src="build/img/place11.jpg" alt="image">
+            </div>
+            <div class="events-content-box__description">
+                <p class="events-content-box__description-title">Food / 16th March, 2019</p>
+                <p class="events-content-box__description-subtitle">Lorem ipsum dolor sit</p>
+                <p class="events-content-box__description-text">Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit, sed</p>
+                <a class="events-content-box__description-link" href="#">READ MORE</a>
+            </div>
+        </div>
+        <!-- <second> -->
+        <div class="events-content-box">
+            <div class="events-content-box__image">
+                <img src="build/img/place22.jpg" alt="image">
+            </div>
+            <div class="events-content-box__description">
+                <p class="events-content-box__description-title">Spices / 16th March, 2019</p>
+                <p class="events-content-box__description-subtitle">Lorem ipsum dolor sit</p>
+                <p class="events-content-box__description-text">Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit, sed</p>
+                <a class="events-content-box__description-link" href="#">READ MORE</a>
+            </div>
+        </div>
+        <!-- <third> -->
+        <div class="events-content-box">
+            <div class="events-content-box__image">
+                <img src="build/img/place33.jpg" alt="image">
+            </div>
+            <div class="events-content-box__description">
+                <p class="events-content-box__description-title">Chicken Curry / 16th March, 2019</p>
+                <p class="events-content-box__description-subtitle">Lorem ipsum dolor sit</p>
+                <p class="events-content-box__description-text">Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit, sed</p>
+                <a class="events-content-box__description-link" href="#">READ MORE</a>
+            </div>
+        </div>
 
+    </div>
+</section>
+<!-- </our event> -->
 
-<body>
+<!-- <footer> -->
+<footer class="footer" id="contacts">
+    <img class="footer__image" src="build/img/text.png" alt="image">
+    <p class="footer__text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis
+    </p>
+    <p class="footer__text-name">Linda Steward</p>
+    <ul class="footer__social">
+        <li> <a class="footer__social-link-1" href="https://www.facebook.com/" target="_blank"></a> </li>
+        <li> <a class="footer__social-link-2" href="https://twitter.com/?lang=ru" target="_blank"></a> </li>
+        <li> <a class="footer__social-link-3" href="https://www.instagram.com/" target="_blank"></a> </li>
+        <li> <a class="footer__social-link-4" href="https://www.pinterest.com/" target="_blank"></a> </li>
+        <li> <a class="footer__social-link-5" href="https://www.google.ru/" target="_blank"></a> </li>
+    </ul>
+</footer>
+<!-- </footer> -->
 
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="build/js/script.js"></script>
-    <script src="build/js/wow.js"></script>
-    <script>
-        new WOW().init();
-    </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="build/js/script.js"></script>
+<script src="build/js/wow.js"></script>
+<script>
+    new WOW().init();
+</script>
 </body>
 
 </html>
