--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 
 <!-- <header> -->
 <header class="header">
+
+    <!-- <adaptive menu> -->
+    <div class="hidden-menu-wrapper">
+        <input type="checkbox" id="hmt" class="hidden-menu-list-ticker">
+        <label class="hidden-menu-button" for="hmt">
+            <span class="hidden-menu-first-line"></span>
+            <span class="hidden-menu-second-line"></span>
+            <span class="hidden-menu-third-line"></span>
+        </label>
+        <ul class="hidden-menu-list">
+            <li><a class="hidden-menu-link" href="#">welcome</a> </li>
+            <li><a class="hidden-menu-link" href="#menu">menu</a> </li>
+            <li><a class="hidden-menu-link" href="#events">events</a> </li>
+            <li><a class="hidden-menu-link" href="#contacts">contact</a> </li>
+        </ul>
+    </div>
+    <!-- </adaptive menu> -->
+
     <nav class="header__nav">
         <ul class="header__nav-links-list">
             <li> <a class="header__nav-links-list-href" href="#">welcome</a> </li>
